# backend/src/routes/user.js
@@ -1,5 +1,5 @@
 import express from 'express'
-import { loginWithPassword, registerUser, resendSignupOtp, signupVerifyOtp } from '../controllers/user.js';
+import { forgotPasswordSendOtp, loginWithPassword, registerUser, resendForgotPasswordOtp, resendSignupOtp, resetPassword, signupVerifyOtp, verifyForgotPasswordOtp } from '../controllers/user.js';
 
 const router=express.Router();
 
@@ -7,6 +7,12 @@ router.post('/signup',registerUser);
 router.post('/resend-otp',resendSignupOtp);
 router.post('/verify-otp',signupVerifyOtp);
 router.post('/login',loginWithPassword);
+
+router.post("/forgot-password", forgotPasswordSendOtp);
+router.post("/forgot-password/resend", resendForgotPasswordOtp);
+router.post("/forgot-password/verify-otp", verifyForgotPasswordOtp);
+router.post("/forgot-password/reset", resetPassword);
+
 
 
 
